Added code to draw line graph
Currently draws graph for Area_51_raid.csv

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Title</title>
+    <title>CSE 442 Final Project</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>My Webpage</h1>
+    <h1>Google Search Trends Data</h1>
     <script src="./index.js"></script>
   </body>
 </html>
