Few More Dashboard Layout changes

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
     <!-- Treat Main as Body -->
     <main class="main">
-      <script src="./index.js"></script>
+      <!--
       <div class="main-overview">
         <div class="overviewcard">
           <div class="overviewcard__icon">Overview</div>
@@ -46,11 +46,14 @@
           <div class="overviewcard__info">Card</div>
         </div>
       </div>
-
+    -->
       <div class="main-cards">
-        <div class="card">Card</div>
-        <div class="card">Card</div>
-        <div class="card">Card</div>
+        <div class="card" id="graph">
+          <script src="./index.js"></script>
+          Graph
+        </div>
+        <div class="card">Slider</div>
+        <div class="card">Map</div>
       </div>
     </main>
     <footer class="footer">
