changed line graph color scheme
color by news topic category

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <div class="main-cards">
       <div class="card" id="graph">
         <script src="./index.js"></script>
-        Graph
+        <div id="graph-text">Graph</div>
       </div>
       <div class="card">Slider</div>
 
