--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,40 @@
             <script src="https://d3js.org/d3.v5.min.js"></script>
             <script src="https://unpkg.com/d3-simple-slider"></script>
             <script type="text/javascript">
+                var data = [1,2,3,4,5,6,7,8,9,10,11,12];
+                var sliderRange = d3
+                    .sliderBottom()
+                    .min(d3.min(data))
+                    .max(d3.max(data))
+                    .width(1300)
+                    .tickFormat(d3.format(''))
+                    .ticks(12)
+                    .default([5, 7])
+                    .fill('#2196f3')
+                    .on('onchange', val => {
+                        //window.updateData(val)
+                        console.log(val);
+                    //d3.select('p#value-range').text(val.map(d3.format('.2%')).join('-'));
+                    });
+
+                var gRange = d3
+                    .select('div#slider')
+                    .append('svg')
+                    .attr('width', 500)
+                    .attr('height', 100)
+                    .append('g')
+                    .attr('fill', 'red');
+
+                gRange.call(sliderRange);
+/*
+            d3.select('p#value-range').text(
+                sliderRange
+                .value()
+                .map(d3.format('.2%'))
+                .join('-')
+            );*/
+
+            /*
                 var hour = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23];
                 var time_select = 16;
                 var TimeSlider = d3
@@ -70,6 +104,7 @@
                     .attr('font-size', '40px');
                 
                     gTimeStep.call(TimeSlider);
+                    */
                                 
             </script>
         </div>
