--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     <header class="header">
         <h1>Google Search Trends Data</h1>
         <div class="header__search">
-            <input type="text" placeholder="Search..">
+            <input id="searchbar" type="text" placeholder="Search..">
+            <script src="./search.js"></script>
         </div>
         <div class="header__avatar">Your face</div>
     </header>
