Side Nav removed

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <div class="grid-container">
     <header class="header">
+        <img id="googleLogo" src="../static/google-trends-logo.png">
         <h1>Google Search Trends Data</h1>
         <div class="header__search">
             <input id="searchbar" type="text" placeholder="Search..">
@@ -19,6 +20,7 @@
         <div class="header__avatar">Your face</div>
     </header>
 
+    <!--
     <aside class="sidenav">
         <img id="googleLogo" src="../static/google-trends-logo.png">
         <ul class="sidenav__list">
@@ -28,7 +30,7 @@
             <li class="sidenav__list-item">Item Four</li>
             <li class="sidenav__list-item">Item Five</li>
         </ul>
-    </aside>
+    </aside>-->
 
     <!-- Treat Main as Body -->
     <main class="main">
