--- a/src/index.html
+++ b/src/index.html
@@ -59,18 +59,23 @@
                 <div id="map1">
                     <script src="./map.js"></script>
                     <link rel="stylesheet" href="map_style.css">
-                    Map
                 </div>
 
+                <div class="card" id="nyt_articles">
+                    <script src="./nyt.js"></script>
+                    <link rel="stylesheet" href="nyt_style.css">
+                </div>
+                <!--
                 <div id="article_pic">
                     Article Pic
-                </div>
+                </div>-->
             </div>
 
+            <!--
             <div class="card" id="nyt_articles">
                 <script src="./nyt.js"></script>
                 <link rel="stylesheet" href="nyt_style.css">
-            </div>
+            </div>-->
         </div>
     </main>
     <footer class="footer">
