--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>CSE 442 Final Project</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon" href="favicon.png">
 </head>
 
 <!--Button in bottom right corner-->
