re-arranged divs to put articles next to map

--- a/src/index.html
+++ b/src/index.html
@@ -62,15 +62,22 @@
                     Map
                 </div>
 
+                <div class="card" id="nyt_articles">
+                    <script src="./nyt.js"></script>
+                    <link rel="stylesheet" href="nyt_style.css">
+                </div>
+                <!--
                 <div id="article_pic">
                     Article Pic
                 </div>
+            -->
             </div>
-
+            <!--
             <div class="card" id="nyt_articles">
                 <script src="./nyt.js"></script>
                 <link rel="stylesheet" href="nyt_style.css">
             </div>
+        -->
         </div>
     </main>
     <footer class="footer">
