Changed Tutorial Method

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,10 @@
 </head>
 
 <!--Button in bottom right corner-->
-<a href="tutorial.html">
-    <div id="tutorial">
-        <i class="material-icons" style="font-size:60px;color:royalblue;">help</i>
-    </div>
-</a>
+<div id="tutorial">
+    <i class="material-icons" style="font-size:60px;color:#fbbc05;">help</i>
+    <span class="tooltiptext">Tooltip text</span>
+</div>
 
 <div class="grid-container">
     <header class="header">
