--- a/src/index.html
+++ b/src/index.html
@@ -28,18 +28,6 @@
         </div>
     </header>
 
-    <!--
-    <aside class="sidenav">
-        <img id="googleLogo" src="../static/google-trends-logo.png">
-        <ul class="sidenav__list">
-            <li class="sidenav__list-item">Item One</li>
-            <li class="sidenav__list-item">Item Two</li>
-            <li class="sidenav__list-item">Item Three</li>
-            <li class="sidenav__list-item">Item Four</li>
-            <li class="sidenav__list-item">Item Five</li>
-        </ul>
-    </aside>-->
-
     <!-- Treat Main as Body -->
     <main class="main">
         <div class="main-cards">
@@ -55,7 +43,7 @@
                 <script src="./slider.js"></script>
             </div>
 
-            <div class="card" id="row">
+            <div id="row">
                 <div id="map1">
                     <script src="./map.js"></script>
                     <link rel="stylesheet" href="map_style.css">
@@ -65,17 +53,7 @@
                     <script src="./nyt.js"></script>
                     <link rel="stylesheet" href="nyt_style.css">
                 </div>
-                <!--
-                <div id="article_pic">
-                    Article Pic
-                </div>-->
             </div>
-
-            <!--
-            <div class="card" id="nyt_articles">
-                <script src="./nyt.js"></script>
-                <link rel="stylesheet" href="nyt_style.css">
-            </div>-->
         </div>
     </main>
     <footer class="footer">
