--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <div class="grid-container">
     <header class="header">
         <img id="googleLogo" src="../static/google-trends-logo.png">
-        <h1>Google Search Trends Data</h1>
+        <h1>Google Search Trends Data 2019</h1>
         <div class="header__search">
             <input id="searchbar" type="text" placeholder="Search..">
             <script src="./search.js"></script>
