multiple fixes and features (legend, selecting topics, articles, etc.)
legend (and other onloads) now appear correctly; added placeholder texts to article box; fixed topic selection (click) to stay selected and update articles when time slider moves; also deselecting actually clears map and articles

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
                 <div class="card" id="nyt_articles">
                     <script src="./nyt.js"></script>
                     <link rel="stylesheet" href="nyt_style.css">
+                    <div id="article_text">Articles</div>
                 </div>
             </div>
         </div>
