made legend act as filter
legend now made of different divs, clicking on one filters out the other categories, and can unfilter by clicking on the category again

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,15 @@
 
             <div class="card" id="graph">
                 <script src="./graph.js"></script>
-                <div id="graph-text">Graph</div>
+                <div id="legend">
+                    <div id="Categories" class="block">Categories: </div>
+                    <div id="Politics" class="block">Politics </div>
+                    <div id="Sports" class="block">Sports </div>
+                    <div id="Environment" class="block">Environment </div>
+                    <div id="Disaster" class="block">Disaster </div>
+                    <div id="Miscellaneous" class="block">Miscellaneous </div>
+                    <div id="Custom" class="block">Custom </div>
+                </div>
             </div>
 
             <div class="card" id="slider">
