minor change to make filters clear

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <div class="card" id="graph">
                 <script src="./graph.js"></script>
                 <div id="legend">
-                    <div id="Categories" class="block">Categories: </div>
+                    <div id="Category-Filters" class="block">Category Filters: </div>
                     <div id="Politics" class="block">Politics </div>
                     <div id="Sports" class="block">Sports </div>
                     <div id="Environment" class="block">Environment </div>
