changed filter to be more flexible
made it possible to filter more than one topic; also changed tutorial text to have placeholder link to video

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <!--Button in bottom right corner-->
 <div id="tutorial">
     <i class="material-icons" style="font-size:60px;color:#fbbc05;">help</i>
-    <span class="tooltiptext">Tooltip text</span>
+    <span class="tooltiptext"><a href="https://vimeo.com/">See demo video!</a></span>
 </div>
 
 <div class="grid-container">
